--- a/index.html
+++ b/index.html
@@ -39,6 +39,79 @@
             </div>
         </div>
     </div>
+
+    <div class="secao-tabela">
+        <h2>Estatísticas</h2>
+        <table class="tabela">
+            <thead>
+                <tr>
+                    <th>Times</th>
+                    <th>Temporadas</th>
+                    <th>Jogos</th>
+                    <th>Gols</th>
+                    <th>Assistências</th>
+                    <th>Títulos</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="assets/cbf.png" alt="">
+                        <p>Brasil</p>
+                    </td>
+                    <td>13</td>
+                    <td>124</td>
+                    <td>77</td>
+                    <td>77</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="assets/santos.png" alt="">
+                        <p>Santos</p>
+                    </td>
+                    <td>5</td>
+                    <td>230</td>
+                    <td>138</td>
+                    <td>77</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="assets/barcelona.png" alt="">
+                        <p>Barcelona</p>
+                    </td>
+                    <td>4</td>
+                    <td>186</td>
+                    <td>105</td>
+                    <td>77</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="assets/psg.png" alt="">
+                        <p>PSG</p>
+                    </td>
+                    <td>6</td>
+                    <td>173</td>
+                    <td>118</td>
+                    <td>77</td>
+                    <td>13</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="assets/alhilal.png" alt="">
+                        <p>Al-Hilal</p>
+                    </td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>77</td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     
 </body>
 </html>
