--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
     <div class="secao-banner"> 
 
-        <video src="video/videoneymar.mp4" type="video/mp4"></video>
+        <video 
+            autoplay loop muted
+            src="video/videoneymar.mp4"     
+            type="video/mp4">
+        <video>
 
         <div class="container-informacoes">
             <div class="imgPerfil-titulo">
