Adicionamento dos caminhos dos links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             autoplay loop muted
             src="video/videoneymar.mp4"     
             type="video/mp4">
-        <video>
+        </video>
 
         <div class="container-informacoes">
             <div class="imgPerfil-titulo">
@@ -25,23 +25,23 @@
                 <h1>Neymar Jr</h1>
             </div>
             <div class="container-links">
-                <a href="">
+                <a href="https://www.youtube.com/@NeymarJrReal" target="_blank">
                     <img src="assets/youtube.png" alt="">
                     <p>Siga meu canal no YouTube</p>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/neymarjr/" target="_blank">
                     <img src="assets/instagram.png" alt="">
                     <p>Me siga no Instagram</p>
                 </a>
-                <a href="">
+                <a href="https://twitter.com/neymarjr" target="_blank">
                     <img src="assets/twitter.png" alt="">
                     <p>Me siga no Twitter</p>
                 </a>
-                <a href="">
+                <a href="https://www.facebook.com/neymarjr" target="_blank">
                     <img src="assets/facebook.png" alt="">
                     <p>Me siga no Facebook</p>
                 </a>
-                <a href="">
+                <a href="https://www.twitch.tv/neymarjr" target="_blank">
                     <img src="assets/twitch.png" alt="">
                     <p>Me siga na Twitch</p>
                 </a>
